@@ -1,3 +1,12 @@
+2012-12-20 Paulo Andrade <pcpa@gnu.org>
+
+	* include/lightning/jit_ppc.h: Correct mismatch of JIT_F{1,5}
+	with enum codes, that were correct, and returned by jit_f().
+
+	* lib/jit_ppc-cpu.c, lib/jit_ppc-fpu.c, lib/jit_ppc.c: Properly
+	implement and better describe values when generating stack
+	frames.
+
 2012-12-18 Paulo Andrade <pcpa@gnu.org>
 
 	* check/stack.ok, check/stack.tst: New files to test data
